Working on book page + new loader, carousel, general libs & lots more

--- a/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/forms.less
+++ b/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/forms.less
@@ -278,7 +278,7 @@ textarea[class*="span"],
   float: none;
   margin-left: 0;
 }
-// Ensure input-prepend/append never wraps
+// Ensure input-prepend/append_selectors never wraps
 .input-append input[class*="span"],
 .input-append .uneditable-input[class*="span"],
 .input-prepend input[class*="span"],
@@ -509,7 +509,7 @@ select:focus:invalid {
   }
 }
 
-// Remove all border-radius for inputs with both prepend and append
+// Remove all border-radius for inputs with both prepend and append_selectors
 .input-prepend.input-append {
   input,
   select,
@@ -549,7 +549,7 @@ input.search-query {
   .border-radius(15px);
 }
 
-/* Allow for input prepend/append in search forms */
+/* Allow for input prepend/append_selectors in search forms */
 .form-search .input-append .search-query,
 .form-search .input-prepend .search-query {
   .border-radius(0); // Override due to specificity
@@ -602,7 +602,7 @@ input.search-query {
 .form-inline .btn-group {
   display: inline-block;
 }
-// Remove margin for input-prepend/-append
+// Remove margin for input-prepend/-append_selectors
 .form-search .input-append,
 .form-inline .input-append,
 .form-search .input-prepend,
@@ -658,7 +658,7 @@ legend + .control-group {
   }
   // Move over all input controls and content
   .controls {
-    // Super jank IE7 fix to ensure the inputs in .input-append and input-prepend
+    // Super jank IE7 fix to ensure the inputs in .input-append_selectors and input-prepend
     // don't inherit the margin of the parent, in this case .controls
     *display: inline-block;
     *padding-left: 20px;
