--- a/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/mixins.less
+++ b/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/mixins.less
@@ -187,7 +187,7 @@
       .box-shadow(@shadow);
     }
   }
-  // Give a small background color for input-prepend/-append
+  // Give a small background color for input-prepend/-append_selectors
   .input-prepend .add-on,
   .input-append .add-on {
     color: @textColor;
