--- a/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/responsive-767px-max.less
+++ b/public/assets/font-awesome/src/3.2.1/assets/less/bootstrap-2.3.2/responsive-767px-max.less
@@ -87,7 +87,7 @@
   .uneditable-input {
     .input-block-level();
   }
-  // But don't let it screw up prepend/append inputs
+  // But don't let it screw up prepend/append_selectors inputs
   .input-prepend input,
   .input-append input,
   .input-prepend input[class*="span"],
