--- a/public/components/chart/chart.html
+++ b/public/components/chart/chart.html
@@ -3,11 +3,11 @@
 <head>
     <title>Starter Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
-    <link rel="stylesheet" href="/scss/index/index.css">
-    <link rel="stylesheet" href="/scss/components/carousel.css">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/components/carousel/carousel.css">
 </head>
 
 <body>
