--- a/public/components/navbar/navbar.scss
+++ b/public/components/navbar/navbar.scss
@@ -1,4 +1,4 @@
-@import '../../scss/booboky-colors';
+@import '../../lib/scss/booboky-colors';
 @import '../../../node_modules/bootstrap/scss/functions';
 @import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins/breakpoints";
