--- a/public/profile/account/scss/index.scss
+++ b/public/profile/account/scss/index.scss
@@ -1,4 +1,4 @@
-@import "../../../scss/booboky-colors.scss";
+@import "../../../lib/scss/booboky-colors.scss";
 @import "../../../../node_modules/bootstrap/scss/functions";
 @import "../../../../node_modules/bootstrap/scss/variables";
 @import "../../../../node_modules/bootstrap/scss/mixins/breakpoints";
