--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -54,20 +54,26 @@ $theme-colors: (
 }
 
 //Font temporary experiments
+@font-face {
+    font-family: 'Open Sans';
+    src: url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);
+}
+
+@font-face {
+    font-family: 'Muli';
+    src: url(https://fonts.googleapis.com/css?family=Muli&display=swap);
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url(https://fonts.googleapis.com/css?family=Nunito&display=swap);
+}
+
 body {
-    //font-family: 'Muli', sans-serif;
-    //font-family: 'Catamaran', sans-serif;
-    //font-family: 'Lato', sans-serif;
-    //font-family: 'Raleway', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
     h1, h2, h3, h4, h5, h6, .title {
         font-family: 'Nunito', sans-serif;
-        //font-family: 'Montserrat', sans-serif;
-        //font-family: 'Roboto', sans-serif;
-        //font-family: 'Raleway', sans-serif;
-        //font-family: 'Paytone One', sans-serif;
-        font-weight: bold;
     }
 }
 
