--- a/public/components/carousel/carousel.css
+++ b/public/components/carousel/carousel.css
@@ -1,14 +1,27 @@
+/*
+*********** IMPORTANT! ***************
+DO NOT TOUCH STUFF UNLESS YOU KNOW WHY
+YOU SHOULD DO IT
+
+FOR INSTANCE: DO NOT CHANGE ANY MARGIN ! :)
+
+Thanks <3
+Alberto
+**************************************
+ */
+/*********** IMPORTANT! ***************
+
+TO CHANGE STYLES OF ITEM, SEE RELATIVE CSS!
+THIS IS NOT THE PLACE TO CHANGE ITEM STYLES
+ */
 .carousel {
   position: relative;
-  border: 1px solid black;
-  height: 20rem;
 }
 
 .carousel .MS-content {
   height: 100%;
   overflow: hidden;
   white-space: nowrap;
-  border: 1px solid red;
   margin: 0 2rem 0 2rem;
 }
 
@@ -18,26 +31,32 @@
   overflow: hidden;
   position: relative;
   vertical-align: top;
-  border: 1px solid green;
-  border-right: none;
-  width: 20%;
 }
 
-@media (max-width: 1200px) {
+.carousel .MS-content .item {
+  width: 20%;
+}
+@media (max-width: 1199.98px) {
   .carousel .MS-content .item {
     width: 25%;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 991.98px) {
   .carousel .MS-content .item {
     width: 33.3333%;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 767.98px) {
   .carousel .MS-content .item {
     width: 50%;
   }
 }
+@media (max-width: 575.98px) {
+  .carousel .MS-content .item {
+    width: 100%;
+  }
+}
+
 .carousel .MS-controls button {
   position: absolute;
   border: none;
@@ -47,17 +66,12 @@
   top: calc(50% - 15px);
 }
 
-@media (max-width: 767px) {
-  .carousel .MS-controls button {
-    display: none;
-  }
-}
 .carousel .MS-controls .MS-left {
-  left: 0;
+  left: -10px;
 }
 
 .carousel .MS-controls .MS-right {
-  right: 0;
+  right: -10px;
 }
 
 /*# sourceMappingURL=carousel.css.map */
