--- a/public/components/carousel/carousel.scss
+++ b/public/components/carousel/carousel.scss
@@ -2,17 +2,34 @@
 @import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins/breakpoints";
 
+/*
+*********** IMPORTANT! ***************
+DO NOT TOUCH STUFF UNLESS YOU KNOW WHY
+YOU SHOULD DO IT
+
+FOR INSTANCE: DO NOT CHANGE ANY MARGIN ! :)
+
+Thanks <3
+Alberto
+**************************************
+ */
+
+/*********** IMPORTANT! ***************
+
+TO CHANGE STYLES OF ITEM, SEE RELATIVE CSS!
+THIS IS NOT THE PLACE TO CHANGE ITEM STYLES
+ */
+
+$debug : false;
+
 .carousel {
     position: relative;
-    border: 1px solid black;
-    height: 20rem;
 }
 
 .carousel .MS-content {
     height: 100%;
     overflow: hidden;
     white-space: nowrap;
-    border: 1px solid red;
     margin: 0 2rem 0 2rem;
 }
 
@@ -20,30 +37,30 @@
     display: inline-block;
     height: 100%;
     overflow: hidden;
+    @if $debug {
+        border: 1px dashed blueviolet;
+    }
     position: relative;
     vertical-align: top;
-    border: 1px solid green;
-    border-right: none;
-    width: 20%;
 }
+.carousel .MS-content .item {
 
-@media (max-width: 1200px) {
-    .carousel .MS-content .item {
+    width: 20%;
+
+    @include media-breakpoint-down(lg) {
         width: 25%;
     }
-}
-
-@media (max-width: 992px) {
-    .carousel .MS-content .item {
+    @include media-breakpoint-down(md) {
         width: 33.3333%;
     }
-}
-
-@media (max-width: 767px) {
-    .carousel .MS-content .item {
+    @include media-breakpoint-down(sm) {
         width: 50%;
     }
+    @include media-breakpoint-down(xs) {
+        width: 100%;
+    }
 }
+
 
 
 .carousel .MS-controls button {
@@ -55,16 +72,10 @@
     top: calc(50% - 15px);
 }
 
-@media (max-width: 767px) {
-    .carousel .MS-controls button {
-        display: none;
-    }
-}
-
 .carousel .MS-controls .MS-left {
-    left: 0;
+    left: -10px;
 }
 
 .carousel .MS-controls .MS-right {
-    right: 0;
+    right: -10px;
 }
