Working on book section

--- a/public/components/carousel/items/book.html
+++ b/public/components/carousel/items/book.html
@@ -1,6 +1,8 @@
 <div class="item">
-    <div class="container px-0 px-sm-2">
+    <div class="container">
         <div class="image rounded"></div>
-        <p class="title text-dark mt-2"></p>
+        <div class="description text-dark">
+            <p class="title"></p>
+        </div>
     </div>
 </div>
