--- a/public/book/book.scss
+++ b/public/book/book.scss
@@ -1,14 +1,58 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins/breakpoints";
+@import "../../node_modules/bootstrap/scss/variables";
+
+
 
 [aria-expanded="false"] > .expanded,
 [aria-expanded="true"] > .collapsed {
     display: none;
 }
 
+
 $related-book-section-height: 18rem;
 $related-book-section-margin: 15rem;
+$image-height: 10rem;
+$padding: 2rem;
+
+.carousel {
+    background: rebeccapurple;
+    height: calc(#{$related-book-section-height - 2 * $padding});
+}
+
+.carousel .MS-content .item .container {
+    padding: 0 0.3rem 0 0.3rem;
+}
+
+.item .container {
+    width: 100%;
+    padding: 0;
+    height: 100%;
+}
+
+.item .image {
+    //background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    background-color: blue;
+}
+
+.item .description {
+    position: absolute;
+    bottom: 0;
+    background: #0a5489;
+    margin-bottom: 0;
+    right: 0.3rem;
+    height: 5rem;
+    left: 0.3rem;
+    white-space: pre-line;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+    vertical-align: center;
+    background: linear-gradient(to bottom, #e5e5e5 1%, #e5e5e5 1%, #1e5799 100%);
+}
 
 .book-image img {
     @include media-breakpoint-down(sm) {
@@ -22,15 +66,25 @@ $related-book-section-margin: 15rem;
 }
 
 .related-books > svg.head {
+    z-index: 100;
     height: 100%;
     position: absolute;
     margin-left: $related-book-section-margin;
 }
+
 .related-books > svg.tail {
+    z-index: 101;
     height: 100%;
     width: calc(100% - #{$related-book-section-margin + $related-book-section-height / 2 - 0.1rem});
     position: absolute;
     margin-left: $related-book-section-margin + $related-book-section-height / 2 - 0.1rem;
+}
+
+.related-books > .container-fluid {
+    position: relative;
+    z-index: 102;
+    height: 100%;
+    padding: #{$padding} #{$padding} #{$padding}  $related-book-section-margin + $related-book-section-height / 2 - 0.1rem;
 }
 
 .book-reviews {
