--- a/public/components/carousel/carousel-five.scss
+++ b/public/components/carousel/carousel-five.scss
@@ -1,7 +1,7 @@
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins/breakpoints";
-
+@import "common.scss";
 /*
 *********** IMPORTANT! ***************
 DO NOT TOUCH STUFF UNLESS YOU KNOW WHY
@@ -20,29 +20,6 @@ TO CHANGE STYLES OF ITEM, SEE RELATIVE CSS!
 THIS IS NOT THE PLACE TO CHANGE ITEM STYLES
  */
 
-$debug : false;
-
-.carousel {
-    position: relative;
-}
-
-.carousel .MS-content {
-    height: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 2rem 0 2rem;
-}
-
-.carousel .MS-content .item {
-    display: inline-block;
-    height: 100%;
-    overflow: hidden;
-    @if $debug {
-        border: 1px dashed blueviolet;
-    }
-    position: relative;
-    vertical-align: top;
-}
 .carousel .MS-content .item {
 
     width: 20%;
@@ -61,21 +38,6 @@ $debug : false;
     }
 }
 
-
-
-.carousel .MS-controls button {
-    position: absolute;
-    border: none;
-    background: transparent;
-    font-size: 30px;
-    outline: 0;
-    top: calc(50% - 15px);
-}
-
-.carousel .MS-controls .MS-left {
-    left: -10px;
-}
-
-.carousel .MS-controls .MS-right {
-    right: -10px;
+.carousel .MS-content .item .container {
+    padding: 0 0.3rem 0 0.3rem;
 }
