--- a/public/components/carousel/items/book.scss
+++ b/public/components/carousel/items/book.scss
@@ -2,20 +2,20 @@
 @import "../../../../node_modules/bootstrap/scss/variables";
 @import "../../../../node_modules/bootstrap/scss/mixins/breakpoints";
 
-
+$image-height: 20rem;
 .item .container {
     width: 100%;
     height: 100%;
-}
-.item .container * {
-    white-space: pre-wrap;
+
 }
 .item .image {
     background-size: 100% 100%;
-    height: 20rem;
+    height: $image-height;
     width: 100%;
     @include media-breakpoint-down(sm) {
         height: 25rem;
     }
-
+}
+.item .description {
+    margin-top: 1rem;
 }
