--- a/public/components/carousel/items/book.html
+++ b/public/components/carousel/items/book.html
@@ -1,8 +1,8 @@
 <div class="item">
     <div class="container">
         <div class="image rounded"></div>
-        <div class="description text-dark">
-            <p class="title"></p>
+        <div class="description text-white font-weight-bold">
+            <p class="title text-uppercase"></p>
         </div>
     </div>
 </div>
