--- a/public/book/book.scss
+++ b/public/book/book.scss
@@ -4,64 +4,99 @@
 @import "../../node_modules/bootstrap/scss/variables";
 
 
-
 [aria-expanded="false"] > .expanded,
 [aria-expanded="true"] > .collapsed {
     display: none;
 }
 
 
-$related-book-section-height: 18rem;
+$carousel-height: 18rem;
 $related-book-section-margin: 15rem;
-$image-height: 10rem;
+$item-width: $carousel-height / 1.6;
 $padding: 2rem;
+$related-align: $related-book-section-margin + ($carousel-height + 2 * $padding) / 2 - 0.01rem;
+@function get-switch-breakpoint($n) { @return $item-width * $n + $related-align * 1.8; }
+
+@function padding-for($n) {
+    @return calc(#{100% / (2 * $n)} - #{$n * $item-width / (2 * $n)})
+}
 
 .carousel {
-    background: rebeccapurple;
-    height: calc(#{$related-book-section-height - 2 * $padding});
+    height: $carousel-height;
 }
 
-.carousel .MS-content .item .container {
-    padding: 0 0.3rem 0 0.3rem;
-}
-
-.item .container {
+.carousel .MS-content .item {
     width: 100%;
-    padding: 0;
-    height: 100%;
-}
-
-.item .image {
-    //background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    background-color: blue;
-}
-
-.item .description {
-    position: absolute;
-    bottom: 0;
-    background: #0a5489;
-    margin-bottom: 0;
-    right: 0.3rem;
-    height: 5rem;
-    left: 0.3rem;
-    white-space: pre-line;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-align: center;
-    vertical-align: center;
-    background: linear-gradient(to bottom, #e5e5e5 1%, #e5e5e5 1%, #1e5799 100%);
-}
-
-.book-image img {
+    @include media-breakpoint-down(md) {
+        width: 33.33%;
+    }
     @include media-breakpoint-down(sm) {
         width: 100%;
     }
 }
 
+@media (min-width: get-switch-breakpoint(2)) {
+    .carousel .MS-content .item {
+        width: 50%;
+    }
+}
+
+@media (min-width: get-switch-breakpoint(3)) {
+    .carousel .MS-content .item {
+        width: 33.3333%;
+    }
+}
+
+
+.carousel .MS-content .item .container {
+    width: $item-width;
+    height: 100%;
+    position: relative;
+    margin: 0px auto;
+    padding: 0;
+}
+
+
+.item .image {
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+}
+
+.item .description p {
+    position: relative;
+    margin: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0.8rem;
+    font-size: 14px;
+}
+
+.carousel .MS-content .item .container > .description {
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+
+}
+
+.carousel .MS-content .item .container:hover > .description {
+
+    opacity: 1;
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    left: 0;
+    top: 0;
+    text-align: center;
+    background: linear-gradient(to top, $dark 0%, black 100%);
+    transition: all 0.2s ease-in-out;
+
+}
+
 .related-books {
-    height: $related-book-section-height;
     position: relative;
 }
 
@@ -70,27 +105,37 @@ $padding: 2rem;
     height: 100%;
     position: absolute;
     margin-left: $related-book-section-margin;
+    @include media-breakpoint-down(md) {
+        visibility: hidden;
+    }
 }
 
 .related-books > svg.tail {
     z-index: 101;
     height: 100%;
-    width: calc(100% - #{$related-book-section-margin + $related-book-section-height / 2 - 0.1rem});
+    width: calc(100% - #{$related-book-section-margin});
     position: absolute;
-    margin-left: $related-book-section-margin + $related-book-section-height / 2 - 0.1rem;
+    margin-left: $related-align;
+    @include media-breakpoint-down(md) {
+        width: 100%;
+        margin: 0;
+    }
 }
 
 .related-books > .container-fluid {
     position: relative;
     z-index: 102;
     height: 100%;
-    padding: #{$padding} #{$padding} #{$padding}  $related-book-section-margin + $related-book-section-height / 2 - 0.1rem;
+    padding: #{$padding} #{$padding} #{$padding}  $related-align;
+    @include media-breakpoint-down(md) {
+        padding: #{$padding};
+    }
 }
 
 .book-reviews {
-    margin-top: - $related-book-section-height / 2;
+    margin-top: - $carousel-height / 2;
 }
 
 .book-reviews > .container {
-    margin-top: $related-book-section-height / 2 + 5rem;
+    margin-top: $carousel-height / 2 + 5rem;
 }
