--- a/public/components/carousel/items/book.html
+++ b/public/components/carousel/items/book.html
@@ -1,7 +1,7 @@
 <div class="item">
     <div class="container">
         <div class="image rounded"></div>
-        <div class="description text-white font-weight-bold">
+        <div class="description rounded text-white font-weight-bold">
             <p class="title text-uppercase"></p>
         </div>
     </div>
