--- a/public/book/book.scss
+++ b/public/book/book.scss
@@ -9,50 +9,117 @@
     display: none;
 }
 
-
+$debug: false;
 $carousel-height: 18rem;
 $related-book-section-margin: 15rem;
 $item-width: $carousel-height / 1.6;
 $padding: 2rem;
-$related-align: $related-book-section-margin + ($carousel-height + 2 * $padding) / 2 - 0.01rem;
-@function get-switch-breakpoint($n) { @return $item-width * $n + $related-align * 1.8; }
+$carousel-margin: 2rem;
+$related-align: $related-book-section-margin + ($carousel-height + 2 * $padding) / 2 - 0.1rem;
 
-@function padding-for($n) {
-    @return calc(#{100% / (2 * $n)} - #{$n * $item-width / (2 * $n)})
+
+@function breakpoint-show($n) {
+    $r-width: $n * $item-width + $carousel-margin * 2;
+    @return #{$related-align + $r-width + 7/12 * $r-width}
 }
 
+.related-books > .container-fluid {
+    position: relative;
+    z-index: 102;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    @include media-breakpoint-up(lg) {
+        padding: $padding 0 $padding $related-align;
+    }
+}
+
+
 .carousel {
+    position: relative;
+}
+
+.carousel .MS-content {
     height: $carousel-height;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 $carousel-margin 0 $carousel-margin;
 }
 
 .carousel .MS-content .item {
-    width: 100%;
-    @include media-breakpoint-down(md) {
-        width: 33.33%;
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
+    white-space: normal;
+
+    @if $debug {
+        border: 1px dashed blueviolet;
     }
-    @include media-breakpoint-down(sm) {
+    position: relative;
+    vertical-align: top;
+}
+
+
+.carousel .MS-controls button {
+    position: absolute;
+    border: none;
+    background: transparent;
+    font-size: 30px;
+    color: $white;
+    outline: 0;
+    top: calc(50% - 15px);
+}
+
+.carousel .MS-controls .MS-left {
+    left: 0;
+    @include media-breakpoint-down(md) {
+        left: 10px;
+    }
+}
+
+.carousel .MS-controls .MS-right {
+    right: 0px;
+    @include media-breakpoint-down(md) {
+        right: 10px;
+    }
+}
+
+
+.carousel {
+    height: 100%;
+}
+
+.carousel .MS-content .item {
+    @include media-breakpoint-up(xs) {
         width: 100%;
     }
-}
-
-@media (min-width: get-switch-breakpoint(2)) {
-    .carousel .MS-content .item {
+    @include media-breakpoint-between(sm, md) {
         width: 50%;
     }
+    @include media-breakpoint-up(md) {
+        width: 33.33%;
+    }
+
+    @include media-breakpoint-up(lg) {
+        width: 100%;
+    }
+
 }
 
-@media (min-width: get-switch-breakpoint(3)) {
-    .carousel .MS-content .item {
-        width: 33.3333%;
+@for $k from 2 to 10 {
+    @media (min-width: breakpoint-show($k)) {
+        .carousel .MS-content .item {
+            width: 100% / $k;
+        }
     }
 }
-
 
 .carousel .MS-content .item .container {
     width: $item-width;
     height: 100%;
     position: relative;
-    margin: 0px auto;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -107,13 +174,14 @@ $related-align: $related-book-section-margin + ($carousel-height + 2 * $padding)
     margin-left: $related-book-section-margin;
     @include media-breakpoint-down(md) {
         visibility: hidden;
+        margin: 0;
     }
 }
 
 .related-books > svg.tail {
     z-index: 101;
     height: 100%;
-    width: calc(100% - #{$related-book-section-margin});
+    width: calc(100% - #{$related-align});
     position: absolute;
     margin-left: $related-align;
     @include media-breakpoint-down(md) {
@@ -122,20 +190,15 @@ $related-align: $related-book-section-margin + ($carousel-height + 2 * $padding)
     }
 }
 
-.related-books > .container-fluid {
-    position: relative;
-    z-index: 102;
-    height: 100%;
-    padding: #{$padding} #{$padding} #{$padding}  $related-align;
-    @include media-breakpoint-down(md) {
-        padding: #{$padding};
-    }
-}
 
 .book-reviews {
-    margin-top: - $carousel-height / 2;
+    margin-top: - ($carousel-height + 2 * $carousel-margin) / 2;
 }
 
 .book-reviews > .container {
-    margin-top: $carousel-height / 2 + 5rem;
+    margin-top: ($carousel-height + 2 * $carousel-margin) / 2 + 5rem;
+}
+
+.book-image img {
+    width: 100%;
 }
