--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -28,7 +28,8 @@
             <div class="navbar-collapse collapse" id="navbarIcons">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" id="shopping-cart" data-toggle="collapse" data-target="" aria-controls=""
+                           ara-expanded="false">
                             <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
                         </a>
                     </li>
@@ -138,6 +139,32 @@
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="collapse ml-auto" id="shopping-cart-ribbon">
+        <div class="container bg-dark text-white">
+            <div class="row">
+                <div class="col bg-danger">
+                    <div class="cart container mt-3 mx-auto my-auto">
+                        <div class="">
+                            <h3 class="text-gradient">Title</h3>
+                        </div>
+                        <div class="container pre-scrollable objects" style="max-height: 700px">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-column justify-content-center">Total</div>
+                            <div class="d-flex flex-column justify-content-center">Qty</div>
+                            <div class="d-flex flex-column justify-content-center">
+                                <div class="d-flex flex-row justify-content-center">
+                                    <button class="btn btn-primary btn-small mx-2">Empty</button>
+                                    <button class="btn btn-primary btn-small mx-2">Proceed</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
