--- a/public/components/carousel/items/book.html
+++ b/public/components/carousel/items/book.html
@@ -1,8 +1,10 @@
 <div class="item">
-    <div class="container">
-        <div class="image rounded"></div>
-        <div class="description rounded text-white font-weight-bold">
-            <p class="title text-uppercase"></p>
+    <a href="#" class="book-href text-decoration-none">
+        <div class="container">
+            <div class="image rounded"></div>
+            <div class="description rounded font-weight-bold">
+                <p class="title text-uppercase"></p>
+            </div>
         </div>
-    </div>
+    </a>
 </div>
