--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -52,7 +52,7 @@
     <div class="collapse" id="register-login-ribbon">
         <div class="container-fluid">
             <div class="row h-100">
-                <div class="col-12 col-md-6 bg-yellow py-4">
+                <div class="col-12 col-md-6 bg-warning py-4">
                     <div class="row d-flex flex-column justify-content-center">
                         <div class="col col-xl-8 m-auto d-md-flex justify-content-center">
                             <div>
@@ -146,22 +146,24 @@
     </div>
 
     <div class="collapse ml-auto" id="shopping-cart-ribbon">
-        <div class="container bg-dark text-white">
-            <div class="row">
-                <div class="col bg-danger">
-                    <div class="cart container mt-3 mx-auto my-auto">
-                        <div class="">
-                            <h3 class="text-gradient">Title</h3>
-                        </div>
-                        <div class="container pre-scrollable objects" style="max-height: 700px">
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex flex-column justify-content-center">Total</div>
-                            <div class="d-flex flex-column justify-content-center">Qty</div>
-                            <div class="d-flex flex-column justify-content-center">
-                                <div class="d-flex flex-row justify-content-center">
-                                    <button class="btn btn-primary btn-small mx-2">Empty</button>
-                                    <button class="btn btn-primary btn-small mx-2">Proceed</button>
+        <div class="blurred-bg">
+            <div class="container text-white">
+                <div class="row">
+                    <div class="col">
+                        <div class="cart container mt-3 mx-auto my-auto">
+                            <div class="row" id="cart-title">
+                                <h3 class="text-gradient">Title</h3>
+                            </div>
+                            <div class="container pre-scrollable objects">
+                            </div>
+                            <div class="d-flex justify-content-between" id="cart-bottom">
+                                <div class="d-flex flex-column justify-content-center">Total</div>
+                                <div class="d-flex flex-column justify-content-center">Qty</div>
+                                <div class="d-flex flex-column justify-content-center">
+                                    <div class="d-flex flex-row justify-content-center">
+                                        <button class="btn btn-primary btn-small mx-2">Empty</button>
+                                        <button class="btn btn-primary btn-small mx-2">Proceed</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
