Implementing api call for shopping cart

--- a/public/components/cart/cart-element.html
+++ b/public/components/cart/cart-element.html
@@ -1,21 +1,21 @@
 <div class="container shopping-item border border-dark rounded py-3">
     <div class="row">
         <div class="col-2">
-            <img class="w-100"
+            <img class="w-100 book-image"
                  src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg">
         </div>
         <div class="col mb-0">
             <div class="container px-0">
                 <div class="row">
                     <div class="my-auto col-12 col-md-4 title h-100 mb-0">
-                        <h5>Title</h5>
-                        <h6>Author</h6>
+                        <h5 class="book-title">Title</h5>
+                        <h6 class="book-author">Author</h6>
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="container px-0">
                             <div class="row">
                                 <span class="col-4 fa fa-minus-circle"></span>
-                                <div class="col-4"><h5>#</h5></div>
+                                <div class="col-4"><h5 class="book-qty">#</h5></div>
                                 <span class="col-4 fa fa-plus-circle"></span>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                     <div class="col-12 col-md-5">
                         <div class="container px-0">
                             <div class="row">
-                                <div class="col-9"><h5>€ 15.00</h5></div>
+                                <div class="col-9"><h5 class="book-price">€ 15.00</h5></div>
                                 <span class="col-3 fa fa-trash"></span>
                             </div>
                         </div>
