Fixed form style

--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -21,6 +21,25 @@ $theme-colors: (
    border-color: white;
 }
 
+.form-group {
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.form-control-placeholder {
+    position: absolute;
+    top: 0;
+    transition: all 200ms;
+    opacity: 0.5;
+}
+
+.form-control:focus + .form-control-placeholder,
+.form-control:valid + .form-control-placeholder {
+    font-size: 75%;
+    transform: translate3d(0, -100%, 0);
+    opacity: 1;
+}
+
 /*
     Extensions
  */
