Fixing stashed content pt2.

--- a/public/components/review/review.html
+++ b/public/components/review/review.html
@@ -15,10 +15,7 @@
             </div>
             <div class="col-12 col-md-9 d-flex flex-column justify-content-start">
                 <h5 class="title">Title</h5>
-                <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
-                    nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
-                    enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                    nisl ut aliquipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
+                <p class="content"> </p>
             </div>
         </div>
     </div>
