--- a/public/components/loading/loading.css
+++ b/public/components/loading/loading.css
@@ -3,8 +3,10 @@ div.loading {
   z-index: 1001;
   background: white;
   margin: 0;
-  left:0;
-  top:0;
-  right:0;
+  left: 0;
+  top: 0;
+  right: 0;
   bottom: 0;
 }
+
+/*# sourceMappingURL=loading.css.map */
