--- a/public/components/review/review.html
+++ b/public/components/review/review.html
@@ -1,21 +1,13 @@
-<div class="review border border-pink rounded-bobooky p-4">
+<div class="review border border-pink rounded-bobooky p-4 mb-4">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-3 d-flex flex-column justify-content-start">
                 <h5 class="author">Author</h5>
-                <div class="text-light rating mt-1">
-                    <div class="icons d-inline">
-                        <i class="fa fa-bookmark text-pink"></i>
-                        <i class="fa fa-bookmark text-pink"></i>
-                        <i class="fa fa-bookmark text-pink"></i>
-                        <i class="fa fa-bookmark-o text-pink"></i>
-                        <i class="fa fa-bookmark-o text-pink"></i>
-                    </div>
-                </div>
+                <div class="text-light rating mt-1"></div>
             </div>
             <div class="col-12 col-md-9 d-flex flex-column justify-content-start">
                 <h5 class="title">Title</h5>
-                <p class="content"> </p>
+                <p class="content"></p>
             </div>
         </div>
     </div>
