Working on shopping chart

--- a/public/components/cart/cart-element.html
+++ b/public/components/cart/cart-element.html
@@ -14,9 +14,9 @@
                     <div class="col-12 col-md-3">
                         <div class="container px-0">
                             <div class="row">
-                                <span class="col-4 fa fa-minus-circle"></span>
+                                <span class="col-4 fa fa-minus-circle minus-button"></span>
                                 <div class="col-4"><h5 class="book-qty">#</h5></div>
-                                <span class="col-4 fa fa-plus-circle"></span>
+                                <span class="col-4 fa fa-plus-circle plus-button"></span>
                             </div>
                         </div>
                     </div>
@@ -24,7 +24,7 @@
                         <div class="container px-0">
                             <div class="row">
                                 <div class="col-9"><h5 class="book-price">€ 15.00</h5></div>
-                                <span class="col-3 fa fa-trash"></span>
+                                <span class="col-3 fa fa-trash trash-button"></span>
                             </div>
                         </div>
                     </div>
